force-app/main/default/objects/Account/fields/account_is_active__c.field-meta.xml
<CustomField>
    <fullName>account_is_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>account is active</label>
    <type>Checkbox</type>
</CustomField>