force-app/main/default/objects/Account/fields/DevOps_Test__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DevOps Test</label>
    <type>Checkbox</type>
</CustomField>