force-app/main/default/objects/Account/fields/Phenoble_member__c.field-meta.xml
<CustomField>
    <fullName>Phenoble_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phenoble member</label>
    <type>Checkbox</type>
</CustomField>